--- a/menu/06-移动网页开发/代码/02-vw单位和插件使用.html
+++ b/menu/06-移动网页开发/代码/02-vw单位和插件使用.html
@@ -16,6 +16,7 @@
       height: 106px; */
       /* width: 28.266vw;
       height: 28.266vw; */
+      /* alt+v+w 快捷键 */
       width: 28.2667vw;
       height: 28.2667vw;
       background-color: pink;
