--- a/menu/05-前沿技术拓展/代码/16-变量和calc计算函数的应用.html
+++ b/menu/05-前沿技术拓展/代码/16-变量和calc计算函数的应用.html
@@ -15,6 +15,7 @@
       list-style: none;
       width: 58px;
       height: 58px;
+      /* 详细解释下面这行的参数代表什么： background: url(图片地址) no-repeat x y */
       background: url(./img/sprite.png) no-repeat 0 calc(var(--i) * -58px);
     }
   </style>
