--- a/menu/05-前沿技术拓展/练习/index.html
+++ b/menu/05-前沿技术拓展/练习/index.html
@@ -24,6 +24,7 @@
             <h2>练习文件列表</h2>
             <ul>
                 <!-- 当添加新的练习文件时，请在这里添加对应的链接 -->
+                <li><a href="_17动感菜单.html">17动感菜单</a></li>
             </ul>
         </section>
         
