--- a/menu/07-响应网页开发/代码/02-仿京东响应式布局.html
+++ b/menu/07-响应网页开发/代码/02-仿京东响应式布局.html
@@ -42,7 +42,7 @@
       margin: 0 auto;
     }
 
-    @media screen and (min-width: 1536px) {
+    @media screen and (min-width: 1326) {
       .box .item {
         min-width: calc(16.6666667% - 16px);
         max-width: calc(16.6666667% - 16px);
@@ -50,18 +50,25 @@
       }
     }
 
-    @media screen and (min-width: 1316px) and (max-width: 1536px) {
+    @media screen and (min-width: 1016px) and (max-width: 1326) {
       .box .item {
         min-width: calc(20% - 16px);
         max-width: calc(20% - 16px);
       }
     }
 
-    @media screen and (max-width: 1316px) {
+    @media screen and (max-width: 1016px) {
 
       .box .item {
         min-width: calc(25% - 16px);
         max-width: calc(25% - 16px);
+      }
+    }
+    @media screen and (max-width: 816px) {
+
+      .box .item {
+        min-width: calc(33.333333% - 16px);
+        max-width: calc(33.333333% - 16px);
       }
     }
   </style>
