--- a/menu/07-响应网页开发/练习/index.html
+++ b/menu/07-响应网页开发/练习/index.html
@@ -24,6 +24,7 @@
             <h2>练习文件列表</h2>
             <ul>
                 <!-- 当添加新的练习文件时，请在这里添加对应的链接 -->
+                <li><a href="03_响应式国外网站/index.html">03_响应式国外网站</a></li>
             </ul>
         </section>
         
