--- a/menu/07-响应网页开发/代码/05-BootStrap字体图标使用.html
+++ b/menu/07-响应网页开发/代码/05-BootStrap字体图标使用.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BootStrap字体图标使用</title>
   <link rel="stylesheet" href="./bootstrap/bootstrap.min.css">
+  <!-- ?使用bs字体图标库的三种方法？看官方文档 -->
   <!-- 引入bs 字体图标库 -->
+   <!-- !似乎因为无法顺畅连接该网站，导致本页面无法正常加载出来：过了一会又可以了。。 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
   <style>
     .icon {
