--- a/menu/07-响应网页开发/代码/06-vivo响应式网站/index.html
+++ b/menu/07-响应网页开发/代码/06-vivo响应式网站/index.html
@@ -151,6 +151,7 @@
           </div>
         </div>
       </div>
+    </div>
   </section>
 
   <!-- 未来科技模块 -->
@@ -158,6 +159,7 @@
     <div class="container py-5 position-relative">
       <h2 class="text-center fw-bold display-4">未来科技</h2>
       <p class="text-center fs-6 mt-3 info">探索vivo最新科技产品</p>
+      <!-- 行卡片组 -->
       <div class="row">
         <div class="col-md-4 text-center mt-5">
           <i class="bi bi-camera future-icon"></i>
