--- a/menu/07-响应网页开发/练习/index.html
+++ b/menu/07-响应网页开发/练习/index.html
@@ -25,6 +25,7 @@
             <ul>
                 <!-- 当添加新的练习文件时，请在这里添加对应的链接 -->
                 <li><a href="03_响应式国外网站/index.html">03_响应式国外网站</a></li>
+                <li><a href="06_vivo响应式网站/index.html">06_vivo响应式网站</a></li>
             </ul>
         </section>
         
