--- a/menu/07-响应网页开发/练习/03_响应式国外网站/index.html
+++ b/menu/07-响应网页开发/练习/03_响应式国外网站/index.html
@@ -104,6 +104,464 @@
     </div>
   </div>
 
+  <!-- 课程卡片模块 -->
+   <!-- ?像这种模块，存在多个item，使用ul、li是否更好？或者说，有没有其他更好的实现？ -->
+  <div class="course-card">
+    <div class="item">
+      <figure>
+        <img src="./img/pic.png" alt="">
+        <div class="icon1">
+          <img src="./img/swiftui-logo.svg" alt="">
+        </div>
+        <div class="icon2">
+          <img src="./img/ldh.webp" alt="">
+        </div>
+      </figure>
+      <h3>Design and Code User Interfaces with Galileo and Claude AI</h3>
+      <p>17 videos - 5 hours</p>
+      <div class="star">
+        <img src="./img/star.svg" alt="">
+      </div>
+    </div>
+    <div class="item">
+      <figure>
+        <img src="./img/pic2.png" alt="">
+        <div class="icon1">
+          <img src="./img/swiftui-logo.svg" alt="">
+        </div>
+        <div class="icon2">
+          <img src="./img/ldh.webp" alt="">
+        </div>
+      </figure>
+      <h3>Build SwiftUI apps for iOS 18 with Cursor and Xcode</h3>
+      <p>23 videos - 5 hours</p>
+      <div class="star">
+        <img src="./img/star.svg" alt="">
+      </div>
+    </div>
+    <div class="item">
+      <figure>
+        <img src="./img/pic3.png" alt="">
+        <div class="icon1">
+          <img src="./img/swiftui-logo.svg" alt="">
+        </div>
+        <div class="icon2">
+          <img src="./img/ldh.webp" alt="">
+        </div>
+      </figure>
+      <h3>UIKit for iOS 15</h3>
+      <p>17 videos - 5 hours</p>
+      <div class="star">
+        <img src="./img/star.svg" alt="">
+      </div>
+    </div>
+
+    <div class="item item4">
+      <figure>
+        <img src="./img/pic4.png" alt="">
+        <div class="icon1">
+          <img src="./img/swiftui-logo.svg" alt="">
+        </div>
+        <div class="icon2">
+          <img src="./img/ldh.webp" alt="">
+        </div>
+      </figure>
+      <h3>SwiftUI Concurrency</h3>
+      <p>20 videos - 3 hours</p>
+      <div class="star">
+        <img src="./img/star.svg" alt="">
+      </div>
+    </div>
+    <div class="item">
+      <figure>
+        <img src="./img/pic.png" alt="">
+        <div class="icon1">
+          <img src="./img/swiftui-logo.svg" alt="">
+        </div>
+        <div class="icon2">
+          <img src="./img/ldh.webp" alt="">
+        </div>
+      </figure>
+      <h3>Design and Code User Interfaces with Galileo and Claude AI</h3>
+      <p>17 videos - 5 hours</p>
+      <div class="star">
+        <img src="./img/star.svg" alt="">
+      </div>
+    </div>
+    <div class="item">
+      <figure>
+        <img src="./img/pic2.png" alt="">
+        <div class="icon1">
+          <img src="./img/swiftui-logo.svg" alt="">
+        </div>
+        <div class="icon2">
+          <img src="./img/ldh.webp" alt="">
+        </div>
+      </figure>
+      <h3>Build SwiftUI apps for iOS 18 with Cursor and Xcode</h3>
+      <p>23 videos - 5 hours</p>
+      <div class="star">
+        <img src="./img/star.svg" alt="">
+      </div>
+    </div>
+    <div class="item">
+      <figure>
+        <img src="./img/pic3.png" alt="">
+        <div class="icon1">
+          <img src="./img/swiftui-logo.svg" alt="">
+        </div>
+        <div class="icon2">
+          <img src="./img/ldh.webp" alt="">
+        </div>
+      </figure>
+      <h3>UIKit for iOS 15</h3>
+      <p>17 videos - 5 hours</p>
+      <div class="star">
+        <img src="./img/star.svg" alt="">
+      </div>
+    </div>
+    <div class="item item4">
+      <figure>
+        <img src="./img/pic4.png" alt="">
+        <div class="icon1">
+          <img src="./img/swiftui-logo.svg" alt="">
+        </div>
+        <div class="icon2">
+          <img src="./img/ldh.webp" alt="">
+        </div>
+      </figure>
+      <h3>SwiftUI Concurrency</h3>
+      <p>20 videos - 3 hours</p>
+      <div class="star">
+        <img src="./img/star.svg" alt="">
+      </div>
+    </div>
+    <div class="item">
+      <figure>
+        <img src="./img/pic.png" alt="">
+        <div class="icon1">
+          <img src="./img/swiftui-logo.svg" alt="">
+        </div>
+        <div class="icon2">
+          <img src="./img/ldh.webp" alt="">
+        </div>
+      </figure>
+      <h3>Design and Code User Interfaces with Galileo and Claude AI</h3>
+      <p>17 videos - 5 hours</p>
+      <div class="star">
+        <img src="./img/star.svg" alt="">
+      </div>
+    </div>
+    <div class="item">
+      <figure>
+        <img src="./img/pic2.png" alt="">
+        <div class="icon1">
+          <img src="./img/swiftui-logo.svg" alt="">
+        </div>
+        <div class="icon2">
+          <img src="./img/ldh.webp" alt="">
+        </div>
+      </figure>
+      <h3>Build SwiftUI apps for iOS 18 with Cursor and Xcode</h3>
+      <p>23 videos - 5 hours</p>
+      <div class="star">
+        <img src="./img/star.svg" alt="">
+      </div>
+    </div>
+    <div class="item">
+      <figure>
+        <img src="./img/pic3.png" alt="">
+        <div class="icon1">
+          <img src="./img/swiftui-logo.svg" alt="">
+        </div>
+        <div class="icon2">
+          <img src="./img/ldh.webp" alt="">
+        </div>
+      </figure>
+      <h3>UIKit for iOS 15</h3>
+      <p>17 videos - 5 hours</p>
+      <div class="star">
+        <img src="./img/star.svg" alt="">
+      </div>
+    </div>
+    <div class="item item4">
+      <figure>
+        <img src="./img/pic4.png" alt="">
+        <div class="icon1">
+          <img src="./img/swiftui-logo.svg" alt="">
+        </div>
+        <div class="icon2">
+          <img src="./img/ldh.webp" alt="">
+        </div>
+      </figure>
+      <h3>SwiftUI Concurrency</h3>
+      <p>20 videos - 3 hours</p>
+      <div class="star">
+        <img src="./img/star.svg" alt="">
+      </div>
+    </div>
+    <div class="item">
+      <figure>
+        <img src="./img/pic.png" alt="">
+        <div class="icon1">
+          <img src="./img/swiftui-logo.svg" alt="">
+        </div>
+        <div class="icon2">
+          <img src="./img/ldh.webp" alt="">
+        </div>
+      </figure>
+      <h3>Design and Code User Interfaces with Galileo and Claude AI</h3>
+      <p>17 videos - 5 hours</p>
+      <div class="star">
+        <img src="./img/star.svg" alt="">
+      </div>
+    </div>
+    <div class="item">
+      <figure>
+        <img src="./img/pic2.png" alt="">
+        <div class="icon1">
+          <img src="./img/swiftui-logo.svg" alt="">
+        </div>
+        <div class="icon2">
+          <img src="./img/ldh.webp" alt="">
+        </div>
+      </figure>
+      <h3>Build SwiftUI apps for iOS 18 with Cursor and Xcode</h3>
+      <p>23 videos - 5 hours</p>
+      <div class="star">
+        <img src="./img/star.svg" alt="">
+      </div>
+    </div>
+    <div class="item">
+      <figure>
+        <img src="./img/pic3.png" alt="">
+        <div class="icon1">
+          <img src="./img/swiftui-logo.svg" alt="">
+        </div>
+        <div class="icon2">
+          <img src="./img/ldh.webp" alt="">
+        </div>
+      </figure>
+      <h3>UIKit for iOS 15</h3>
+      <p>17 videos - 5 hours</p>
+      <div class="star">
+        <img src="./img/star.svg" alt="">
+      </div>
+    </div>
+    <div class="item item4">
+      <figure>
+        <img src="./img/pic4.png" alt="">
+        <div class="icon1">
+          <img src="./img/swiftui-logo.svg" alt="">
+        </div>
+        <div class="icon2">
+          <img src="./img/ldh.webp" alt="">
+        </div>
+      </figure>
+      <h3>SwiftUI Concurrency</h3>
+      <p>20 videos - 3 hours</p>
+      <div class="star">
+        <img src="./img/star.svg" alt="">
+      </div>
+    </div>
+
+
+  </div>
+
+  <!-- 故事卡片模块 -->
+   <!-- 二二划分：左（左左+左右）+ 右（右上+右下（再分两列））；每两个完成响应式的更改（由两列改为一列） -->
+  <div class="story-card w">
+    <div class="story-l">
+      <div class="story-l-left">
+        <div class="top">
+          <img src="./img/ldh.webp" alt="">
+          <div>
+            <p class="name">Andyliu</p>
+            <p class="info">iOS Developer</p>
+          </div>
+        </div>
+        <div class="middle">
+          <img src="./img/Lingo.png" alt="">
+        </div>
+        <div class="desc">
+          Hey MengTo, I launched my iOS/watchOS app RunnerGoal almost completely built with SwiftUI. Thank you for the
+          design lessons and many controls.
+        </div>
+        <button>View on the app store</button>
+      </div>
+      <div class="story-l-right">
+        <div class="top">
+          <img src="./img/ldh.webp" alt="">
+          <div>
+            <p class="name">Andyliu</p>
+            <p class="info">iOS Developer</p>
+          </div>
+        </div>
+        <div class="middle">
+          <img src="./img/Lingo.png" alt="">
+        </div>
+        <div class="desc">
+          Hey MengTo, I launched my iOS/watchOS app RunnerGoal almost completely built with SwiftUI. Thank you for the
+          design lessons and many controls.
+        </div>
+        <button>View on the app store</button>
+      </div>
+    </div>
+    <div class="story-r">
+      <div class="story-r-top">
+        <div class="top toggle">
+          <img src="./img/ldh.webp" alt="">
+          <div>
+            <p class="name">Andyliu</p>
+            <p class="info">iOS Developer</p>
+          </div>
+        </div>
+        <div class="pic">
+          <img src="./img/460x0w-3.png" alt="">
+        </div>
+        <div class="info">
+          <div class="top">
+            <img src="./img/ldh.webp" alt="">
+            <div>
+              <p class="name">Andyliu</p>
+              <p class="info">iOS Developer</p>
+            </div>
+          </div>
+          <div class="desc">
+            <p>
+            Hey MengTo, I launched my iOS/watchOS app RunnerGoal almost completely built with SwiftUI. Thank you for
+            the
+            design lessons and many controls.
+            </p>
+          </div>
+          <button>View on the app store</button>
+        </div>
+      </div>
+      <div class="story-r-bottom">
+        <div class="top toggle">
+          <img src="./img/ldh.webp" alt="">
+          <div>
+            <p class="name">Andyliu</p>
+            <p class="info">iOS Developer</p>
+          </div>
+        </div>
+        <div class="pic">
+          <img src="./img/460x0w-3.png" alt="">
+        </div>
+        <div class="info">
+          <div class="top">
+            <img src="./img/ldh.webp" alt="">
+            <div>
+              <p class="name">Andyliu</p>
+              <p class="info">iOS Developer</p>
+            </div>
+          </div>
+          <div class="desc">
+            Hey MengTo, I launched my iOS/watchOS app RunnerGoal almost completely built with SwiftUI. Thank you for
+            the
+            design lessons and many controls.
+          </div>
+          <button>View on the app store</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- 底部模块 -->
+  <div class="footer">
+    <!-- con盒子裁剪波浪盒子 -->
+    <div class="con">
+      <!-- ?没有用吧？ -->
+      <div class="bolang"></div>
+      <svg width="1440" height="699" viewBox="0 0 1440 699" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <defs>
+          <clipPath id="wave2">
+            <path
+              d="M1192 63.1469C979.197 -18.7459 969.021 -3.8326 747.038 15.147C525.055 34.1266 456.426 81.6931 291.038 63.147C125.65 44.6009 38.0215 68.2247 -41.1011 88.0053C-41.1011 175.938 -41.1013 376.556 -41.1013 376.556L1481 376.556L1481 63.1469C1481 63.1469 1405.19 145.19 1192 63.1469Z"
+              fill="url(#paint0_linear)"></path>
+          </clipPath>
+        </defs>
+      </svg>
+    </div>
+
+    <div class="footer-con">
+      <div class="footer-con-left">
+        <!-- 对比最上面的 nav，这里就把nav换成了item -->
+        <div class="item">
+          <a href="#">
+            <button>
+              <img src="./img/courses.svg" alt="">
+              <p>Courses</p>
+            </button>
+          </a>
+          <a href="#">
+            <button>
+              <img src="./img/tutorials.svg" alt="">
+              <p>Tutorials</p>
+            </button>
+          </a>
+          <a href="#">
+            <button>
+              <img src="./img/livestreams.svg" alt="">
+              <p>Livestreams</p>
+            </button>
+          </a>
+          <a href="#">
+            <button>
+              <img src="./img/pricing.svg" alt="">
+              <p>Pricing</p>
+            </button>
+          </a>
+          <a href="#">
+            <button>
+              <img src="./img/pricing.svg" alt="">
+              <p>Pricing</p>
+            </button>
+          </a>
+        </div>
+        <div class="item">
+          <a href="#">
+            <button>
+              <img src="./img/courses.svg" alt="">
+              <p>Courses</p>
+            </button>
+          </a>
+          <a href="#">
+            <button>
+              <img src="./img/tutorials.svg" alt="">
+              <p>Tutorials</p>
+            </button>
+          </a>
+          <a href="#">
+            <button>
+              <img src="./img/livestreams.svg" alt="">
+              <p>Livestreams</p>
+            </button>
+          </a>
+          <a href="#">
+            <button>
+              <img src="./img/pricing.svg" alt="">
+              <p>Pricing</p>
+            </button>
+          </a>
+          <a href="#">
+            <button>
+              <img src="./img/pricing.svg" alt="">
+              <p>Pricing</p>
+            </button>
+          </a>
+        </div>
+      </div>
+      <div class="footer-con-right">
+        <p> Site made with React, Gatsby,
+          Netlify and Contentful. Learn how.</p>
+        <p> Design+Code © 2025</p>
+        <p> Terms of Service - Privacy Policy</p>
+        <p>Need help? Contact Us </p>
+      </div>
+
+    </div>
+  </div>
 
 </body>
 
