--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <a href="StudyLog" class="btn btn-secondary">查看笔记</a>
                     <a href="menu/03-现代网页布局/练习/index.html" class="btn btn-primary">我的练习</a>
                     <a href="menu/09-PDF/现代网页布局_20250901095105.pdf" class="btn btn-accent">查看PDF</a>
-                    <a href="exercise-editor.html?chapter=03-现代网页布局" class="btn">练习编辑</a>
+                    <a href="trash/exercise-editor.html?chapter=03-现代网页布局" class="btn">练习编辑</a>
                     <!-- !上面那行的功能暂未实现！！！ -->
                 </div>
             </div>
@@ -113,7 +113,7 @@
                 <p class="chapter-desc">学习如何将前端项目部署到服务器，包括域名配置、文件上传等内容。</p>
                 <div class="chapter-links">
                     <a href="StudyLog" class="btn btn-secondary">查看笔记</a>
-                    <a href="exercise-editor.html?chapter=08-前端网页托管" class="btn btn-secondary">我的练习</a>
+                    <a href="trash/exercise-editor.html?chapter=08-前端网页托管" class="btn btn-secondary">我的练习</a>
                     <a href="menu/09-PDF/前端网页托管_20250901095646.pdf" class="btn btn-accent">查看PDF</a>
                 </div>
             </div>
@@ -132,7 +132,7 @@
                 <div class="utility-card">
                     <h3 class="utility-title">PDF资料</h3>
                     <div class="utility-links">
-                        <a href="res/09-PDF/" class="utility-link-item">浏览所有PDF文件</a>
+                        <a href="menu/09-PDF/" class="utility-link-item">浏览所有PDF文件</a>
                     </div>
                 </div>
             </div>
