--- a/menu/02-CSS3核心技术/练习/index.html
+++ b/menu/02-CSS3核心技术/练习/index.html
@@ -20,7 +20,7 @@
             <a href="../../../index.html" class="quick-link">返回主索引</a>
             <a href="../代码/index.html" class="quick-link secondary">查看代码</a>
             <a href="../../../StudyLog" class="quick-link secondary">查看笔记</a>
-            <a href="../../../res/09-PDF/CSS3核心技术_20250901094937.pdf" class="quick-link accent">查看PDF资料</a>
+            <a href="../../../menu/09-PDF/CSS3核心技术_20250901094937.pdf" class="quick-link accent">查看PDF资料</a>
         </div>
 
         <section>
