--- a/menu/04-交互动效设计/练习/index.html
+++ b/menu/04-交互动效设计/练习/index.html
@@ -19,7 +19,7 @@
             <a href="../../../index.html" class="quick-link">返回主索引</a>
             <a href="../代码/index.html" class="quick-link secondary">查看代码</a>
             <a href="../../../StudyLog" class="quick-link secondary">查看笔记</a>
-            <a href="../../../res/09-PDF/交互动效设计_20250901095241.pdf" class="quick-link accent">查看PDF</a>
+            <a href="../../../menu/09-PDF/交互动效设计_20250901095241.pdf" class="quick-link accent">查看PDF</a>
         </div>
 
         <section>
