--- a/menu/02-CSS3核心技术/代码/index.html
+++ b/menu/02-CSS3核心技术/代码/index.html
@@ -17,7 +17,7 @@
         <div class="quick-links">
             <a href="../练习" class="quick-link secondary">我的练习</a>
             <a href="../../../StudyLog/index.html" class="quick-link secondary">查看笔记</a>
-            <a href="../../../res/09-PDF/CSS3核心技术_20250901094937.pdf" class="quick-link accent">查看PDF资料</a>
+            <a href="../../../menu/09-PDF/CSS3核心技术_20250901094937.pdf" class="quick-link accent">查看PDF资料</a>
             <a href="../../../index.html" class="quick-link">返回主索引</a>
         </div>
         
