--- a/menu/05-前沿技术拓展/代码/index.html
+++ b/menu/05-前沿技术拓展/代码/index.html
@@ -17,7 +17,7 @@
             <a href="../练习/index.html" class="quick-link">我的练习</a>
             <a href="../../../StudyLog" class="quick-link secondary">查看笔记</a>
 
-            <a href="../../../res/09-PDF/前沿技术拓展_20250901095349.pdf" class="quick-link accent">查看PDF资料</a>
+            <a href="../../../menu/09-PDF/前沿技术拓展_20250901095349.pdf" class="quick-link accent">查看PDF资料</a>
             <a href="../../../index.html" class="quick-link">返回主索引</a>
         </div>
         
