--- a/menu_JS/1.JavaScript基础/d5-JavaScript基础第五天/04-code/06-渲染学生信息表.html
+++ b/menu_JS/1.JavaScript基础/d5-JavaScript基础第五天/04-code/06-渲染学生信息表.html
@@ -34,7 +34,7 @@
         }
 
         table tr:not(:first-child):hover {
-            background-color: #eee;
+            background-color: pink;
         }
     </style>
 </head>
