--- a/menu_JS/1.JavaScript基础/d5-JavaScript基础第五天/04-code/14-数据类型存储.html
+++ b/menu_JS/1.JavaScript基础/d5-JavaScript基础第五天/04-code/14-数据类型存储.html
@@ -15,7 +15,8 @@
     num2 = 20
     console.log(num1) // 结果是？
 
-
+    // 对于对象（包括数组、函数等复杂数据类型），这种赋值传递的是对象的引用，
+    // 而不是复制对象的内容。 也就是说，obj1和obj2现在指向内存中的同一个对象。
     let obj1 = {
       age: 18
     }
