--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="progress-fill" id="main-progress"></div>
             </div>
             <div class="progress-stats">
-                <span>已完成章节: <span id="completed-chapters">0</span>/8</span>
+                <span>已完成章节: <span id="completed-chapters">0</span></span>
                 <span>总体进度: <span id="progress-percentage">0%</span></span>
             </div>
         </section>
