--- a/menu_JS/2.web APIs/d2-web APIs第二天/06-练习/index.html
+++ b/menu_JS/2.web APIs/d2-web APIs第二天/06-练习/index.html
@@ -25,6 +25,11 @@
             <h2>练习文件列表</h2>
             <ul>
                 <!-- 当添加新的练习文件时，请在这里添加对应的链接 -->
+                <li><a href="04_随即点名案例.html">04_随即点名案例</a></li>
+                <li><a href="08_轮播图完整版.html">08_轮播图完整版</a></li>
+                <li><a href="10_小米搜索框.html">10_小米搜索框</a></li>
+                <li><a href="15_按下回车发布评论.html">15_按下回车发布评论</a></li>
+                <li><a href="18_tab栏切换.html">18_tab栏切换</a></li>
             </ul>
         </section>
         
