--- a/menu_JS/2.web APIs/d1-web APIs第一天/06-练习/index.html
+++ b/menu_JS/2.web APIs/d1-web APIs第一天/06-练习/index.html
@@ -25,6 +25,8 @@
             <h2>练习文件列表</h2>
             <ul>
                 <!-- 当添加新的练习文件时，请在这里添加对应的链接 -->
+                <li><a href="_13随即轮播图.html">随机轮播图</a></li>
+                <li><a href="_18轮播图定时版.html">轮播图定时版</a></li>
             </ul>
         </section>
         
