--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <div class="chapter-links">
                     <a href="menu_JS/2.web APIs/d1-web APIs第一天/04-code/index.html" class="btn">查看代码</a>
                     <a href="menu_JS/2.web APIs/d1-web APIs第一天/02-笔记/README.md" class="btn btn-secondary">查看笔记</a>
-                    <a href="StudyLog_JS" class="btn btn-secondary">查看我的笔记</a>
+                    <a href="StudyLog_JS/review/webAPI1.md" class="btn btn-secondary">查看我的笔记</a>
                     <a href="menu_JS/2.web APIs/d1-web APIs第一天/06-练习/index.html" class="btn btn-primary">我的练习</a>
                     <a href="menu_JS/2.web APIs/d1-web APIs第一天/01-PPT/web APIs第一天.pdf" class="btn btn-accent">查看PDF</a>
                 </div>
@@ -219,7 +219,7 @@
                 <div class="chapter-links">
                     <a href="menu_JS/2.web APIs/d2-web APIs第二天/04-code/index.html" class="btn">查看代码</a>
                     <a href="menu_JS/2.web APIs/d2-web APIs第二天/02-笔记/README.md" class="btn btn-secondary">查看笔记</a>
-                    <a href="StudyLog_JS" class="btn btn-secondary">查看我的笔记</a>
+                    <a href="StudyLog_JS/review/webAPI2.md" class="btn btn-secondary">查看我的笔记</a>
                     <a href="menu_JS/2.web APIs/d2-web APIs第二天/06-练习/index.html" class="btn btn-primary">我的练习</a>
                     <a href="menu_JS/2.web APIs/d2-web APIs第二天/01-PPT/web APIs第二天.pdf" class="btn btn-accent">查看PDF</a>
                 </div>
@@ -230,7 +230,7 @@
                 <div class="chapter-links">
                     <a href="menu_JS/2.web APIs/d3-web APIs第三天/04-code/index.html" class="btn">查看代码</a>
                     <a href="menu_JS/2.web APIs/d3-web APIs第三天/02-笔记/README.md" class="btn btn-secondary">查看笔记</a>
-                    <a href="StudyLog_JS" class="btn btn-secondary">查看我的笔记</a>
+                    <a href="StudyLog_JS/review/webAPI3.md" class="btn btn-secondary">查看我的笔记</a>
                     <a href="menu_JS/2.web APIs/d3-web APIs第三天/06-练习/index.html" class="btn btn-primary">我的练习</a>
                     <a href="menu_JS/2.web APIs/d3-web APIs第三天/01-PPT/web APIs第三天.pdf" class="btn btn-accent">查看PDF</a>
                 </div>
@@ -241,7 +241,7 @@
                 <div class="chapter-links">
                     <a href="menu_JS/2.web APIs/d4-web APIs 第四天/04-code/index.html" class="btn">查看代码</a>
                     <a href="menu_JS/2.web APIs/d4-web APIs 第四天/02-笔记/README.md" class="btn btn-secondary">查看笔记</a>
-                    <a href="StudyLog_JS" class="btn btn-secondary">查看我的笔记</a>
+                    <a href="StudyLog_JS/review/webAPI4.md" class="btn btn-secondary">查看我的笔记</a>
                     <a href="menu_JS/2.web APIs/d4-web APIs 第四天/06-练习/index.html" class="btn btn-primary">我的练习</a>
                     <a href="menu_JS/2.web APIs/d4-web APIs 第四天/01-PPT/web APIs第四天.pdf" class="btn btn-accent">查看PDF</a>
                 </div>
@@ -252,7 +252,7 @@
                 <div class="chapter-links">
                     <a href="menu_JS/2.web APIs/d5-web APIs第五天/04-code/index.html" class="btn">查看代码</a>
                     <a href="menu_JS/2.web APIs/d5-web APIs第五天/04-笔记/README.md" class="btn btn-secondary">查看笔记</a>
-                    <a href="StudyLog_JS" class="btn btn-secondary">查看我的笔记</a>
+                    <a href="StudyLog_JS/review/webAPI5.md" class="btn btn-secondary">查看我的笔记</a>
                     <a href="menu_JS/2.web APIs/d5-web APIs第五天/06-练习/index.html" class="btn btn-primary">我的练习</a>
                     <a href="menu_JS/2.web APIs/d5-web APIs第五天/01-PPT/web APIs第五天.pdf" class="btn btn-accent">查看PDF</a>
                 </div>
@@ -263,7 +263,7 @@
                 <div class="chapter-links">
                     <a href="menu_JS/2.web APIs/d6-web APIs第六天/04-code/index.html" class="btn">查看代码</a>
                     <a href="menu_JS/2.web APIs/d6-web APIs第六天/02-笔记/README.md" class="btn btn-secondary">查看笔记</a>
-                    <a href="StudyLog_JS" class="btn btn-secondary">查看我的笔记</a>
+                    <a href="StudyLog_JS/review/webAPI6.md" class="btn btn-secondary">查看我的笔记</a>
                     <a href="menu_JS/2.web APIs/d6-web APIs第六天/06-练习/index.html" class="btn btn-primary">我的练习</a>
                     <a href="menu_JS/2.web APIs/d6-web APIs第六天/01-PPT/web APIs第六天.pdf" class="btn btn-accent">查看PDF</a>
                 </div>
