--- a/menu_JS/2.web APIs/d3-web APIs第三天/06-练习/index.html
+++ b/menu_JS/2.web APIs/d3-web APIs第三天/06-练习/index.html
@@ -25,6 +25,13 @@
             <h2>练习文件列表</h2>
             <ul>
                 <!-- 当添加新的练习文件时，请在这里添加对应的链接 -->
+                <li><a href="01-电梯导航.html">01-电梯导航</a></li>
+                <li><a href="01-全选按钮案例.html">02-全选按钮案例</a></li>
+                <li><a href="03-购物车加减操作.html">03-购物车加减操作</a></li>
+                <li><a href="08-tab栏切换.html">08-tab栏切换</a></li>
+                <li><a href="16-仿新浪固定头部.html">16-仿新浪固定头部</a></li>
+                <li><a href="02-仿新浪返回顶部/index.html">02-仿新浪返回顶部</a></li>
+                <li><a href="04-m-bilibili/index.html">04-m-bilibili</a></li>
             </ul>
         </section>
         
