--- a/menu_JS/2.web APIs/d6-web APIs第六天/06-练习/_16小兔鲜_3/product-dev.html
+++ b/menu_JS/2.web APIs/d6-web APIs第六天/06-练习/_16小兔鲜_3/product-dev.html
@@ -568,7 +568,7 @@
   </footer>
 
   <script>
-    // 节流和收缩模块暂时忽略，不用深入；更稳健的querySelector稍微看一下即可
+    // <!--! 节流和收缩模块暂时忽略，不用深入；更稳健的querySelector稍微看一下即可
     (function () {
       'use strict';
 
