--- a/menu_JS/3.JS进阶/d1_JavaScript进阶第一天/04-code/13-必须加分号的两种情况.html
+++ b/menu_JS/3.JS进阶/d1_JavaScript进阶第一天/04-code/13-必须加分号的两种情况.html
@@ -10,7 +10,7 @@
 
 <body>
   <script>
-    // 1. 立即执行函数要加
+    // 1. 立即执行函数要加  多个IIFE连续使用时
     // (function () { })();
     // (function () { })();
     // 2. 使用数组的时候
