--- a/menu_JS/3.JS进阶/d1_JavaScript进阶第一天/06-练习/index.html
+++ b/menu_JS/3.JS进阶/d1_JavaScript进阶第一天/06-练习/index.html
@@ -25,6 +25,8 @@
             <h2>练习文件列表</h2>
             <ul>
                 <!-- 当添加新的练习文件时，请在这里添加对应的链接 -->
+                <li><a href="./20-综合案例-价格筛选.html">20-综合案例-价格筛选</a></li>
+                <li><a href="../07-作业/02-代码题/index.html">作业代码题</a></li>
             </ul>
         </section>
         
