--- a/menu_JS/3.JS进阶/d1_JavaScript进阶第一天/07-作业/01-排错题/2-作用域链拍错题.html
+++ b/menu_JS/3.JS进阶/d1_JavaScript进阶第一天/07-作业/01-排错题/2-作用域链拍错题.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <script>
-    // 找出下面23行的打印 a=10 是否有问题，如果有问题说出原因
+    // 找出下面23行的打印 a=10 是否有问题，如果有问题说出原因。 
+    // 答案：23行没有问题。25行 打印结果应该是 a=200，原因是 fn2 函数中没有使用 let 或 const 声明 a 变量，导致修改的是外层作用域的 a 变量。
     let a = 10;
     let b = 20;
 
@@ -21,6 +22,7 @@
 
     console.log(a);  // 10
     fn1()
+    console.log(a);  // 200
   </script>
 </body>
 </html>
