--- a/menu_JS/3.JS进阶/d1_JavaScript进阶第一天/07-作业/01-排错题/3-闭包拍错题.html
+++ b/menu_JS/3.JS进阶/d1_JavaScript进阶第一天/07-作业/01-排错题/3-闭包拍错题.html
@@ -9,6 +9,7 @@
 <body>
   <script>
     // 第26行打印count = 2 是否正确，如果错误，请说出正确答案
+    // 答案：打印结果是5
     function outer() {
       let count = 1;
       function g() {
@@ -23,7 +24,7 @@
     res()
     res()
     res()
-    res() // count = 2
+    res() // count = 5
   </script>
 </body>
 </html>
