--- a/menu_JS/3.JS进阶/d1_JavaScript进阶第一天/07-作业/01-排错题/4-箭头函数拍错题.html
+++ b/menu_JS/3.JS进阶/d1_JavaScript进阶第一天/07-作业/01-排错题/4-箭头函数拍错题.html
@@ -9,7 +9,9 @@
 <body>
   <script>
     // 请说出一下代码是否错误，如果有错如何改正，才能返回一个对象
+    // 答案：错误，箭头函数需要用圆括号包裹对象字面量，改为 const fn = x => ({name: x, age: x*2})
     const fn = x => {name: x, age: x*2}
+    // const fn = x => ({name: x, age: x*2})
   </script>
 </body>
 </html>
