--- a/menu_JS/3.JS进阶/d1_JavaScript进阶第一天/07-作业/01-排错题/5-解构赋值.html
+++ b/menu_JS/3.JS进阶/d1_JavaScript进阶第一天/07-作业/01-排错题/5-解构赋值.html
@@ -9,8 +9,9 @@
 <body>
   <script>
     // 以下代码是否会正常执行，如果不会，如何改正
+    // 答案：不会正常执行，原因是 JavaScript 解析器会将换行后的括号解释为函数调用，导致语法错误。改正方法是在解构赋值语句后加分号，或者将立即执行函数表达式与解构赋值语句放在同一行。
     const [min, avg, max] = [100,200,300]
-    (function() {
+    ;(function() {
       console.log(min);
     })()
   </script>
