--- a/menu_JS/3.JS进阶/d2_JavaScript进阶第二天/06-练习/index.html
+++ b/menu_JS/3.JS进阶/d2_JavaScript进阶第二天/06-练习/index.html
@@ -25,6 +25,9 @@
             <h2>练习文件列表</h2>
             <ul>
                 <!-- 当添加新的练习文件时，请在这里添加对应的链接 -->
+                <li><a href="./14-综合案例.html">14-综合案例</a></li>
+                <li><a href="../07-作业/02-主观题/购物车.html">作业购物车</a></li>
+                <li><a href="../07-作业/02-主观题/购物车refactor.html">作业购物车（重构版）</a></li>
             </ul>
         </section>
         
