--- a/menu_JS/3.JS进阶/d3_JavaScript进阶第三天/06-练习/index.html
+++ b/menu_JS/3.JS进阶/d3_JavaScript进阶第三天/06-练习/index.html
@@ -25,6 +25,8 @@
             <h2>练习文件列表</h2>
             <ul>
                 <!-- 当添加新的练习文件时，请在这里添加对应的链接 -->
+                <li><a href="./08-综合案例.html">08-综合案例</a></li>
+                <li><a href="../07-作业/pink冰墩墩.html">作业题冰墩墩</a></li>
             </ul>
         </section>
         
