--- a/menu_JS/3.JS进阶/d3_JavaScript进阶第三天/07-作业/排错题/11-构造函数this的拍错题.html
+++ b/menu_JS/3.JS进阶/d3_JavaScript进阶第三天/07-作业/排错题/11-构造函数this的拍错题.html
@@ -9,6 +9,7 @@
 <body>
   <script>
     // 以下代码13行的this值是 window，说法对吗，为什么
+    // 答案：不对，this指向新创建的对象ldh
     function Star(name) {
       console.log(this);
       this.name = name
