--- a/menu_JS/3.JS进阶/d3_JavaScript进阶第三天/07-作业/排错题/14-对象的隐式属性排错题.html
+++ b/menu_JS/3.JS进阶/d3_JavaScript进阶第三天/07-作业/排错题/14-对象的隐式属性排错题.html
@@ -9,6 +9,7 @@
 <body>
   <script>
     // 以下代码的16行返回true，是否正确，为什么
+    // 答案：不对，obj.__proto__指向Star.prototype
     function Star() {}
     Star.prototype.sing = function(){}
 
