--- a/menu_JS/3.JS进阶/d1_JavaScript进阶第一天/06-练习/20-综合案例-价格筛选.html
+++ b/menu_JS/3.JS进阶/d1_JavaScript进阶第一天/06-练习/20-综合案例-价格筛选.html
@@ -83,9 +83,9 @@
 
 <body>
   <div class="filter">
-    <a data-index="1" href="javascript:;">0-100元</a>
-    <a data-index="2" href="javascript:;">100-300元</a>
-    <a data-index="3" href="javascript:;">300元以上</a>
+    <a href="javascript:;" data-type="0-100">0-100元</a>
+    <a href="javascript:;" data-type="100-300">100-300元</a>
+    <a href="javascript:;" data-type="300+">300元以上</a>
     <a href="javascript:;">全部区间</a>
   </div>
   <div class="list">
@@ -95,8 +95,10 @@
       <p class="price"></p>
     </div> -->
   </div>
+
+
   <script>
-    // 2. 初始化数据
+    // 初始化数据
     const goodsList = [
       {
         id: '4001172',
@@ -150,45 +152,42 @@
 
     // 1. 渲染函数  封装
     function render(arr) {
-      // 声明空字符串
       let str = ''
-      // 遍历数组 
-      arr.forEach(item => {
-        // 解构
-        const { name, picture, price } = item
+      // arr.forEach(item => {
+      // const { name, picture, price } = item
+      arr.forEach(({ name, price, picture }) => {
+        //<!--? "${picture}"需要双引号吗？
         str += `
-         <div class="item">
-          <img src=${picture} alt="">
-          <p class="name">${name}</p>
-          <p class="price">${price}</p>
-        </div> 
+          <div class="item">
+            <img src="${picture}" alt="">
+            <p class="name">${name}</p>
+            <p class="price">${price}</p>
+          </div>
         `
       })
-      // 追加给list 
       document.querySelector('.list').innerHTML = str
     }
-    render(goodsList)  // 页面一打开就需要渲染
 
     // 2. 过滤筛选  
     document.querySelector('.filter').addEventListener('click', e => {
-      // e.target.dataset.index   e.target.tagName
       const { tagName, dataset } = e.target
-      // 判断 
       if (tagName === 'A') {
-        // console.log(11) 
-        // arr 返回的新数组
         let arr = goodsList
-        if (dataset.index === '1') {
-          arr = goodsList.filter(item => item.price > 0 && item.price <= 100)
-        } else if (dataset.index === '2') {
-          arr = goodsList.filter(item => item.price >= 100 && item.price <= 300)
-        } else if (dataset.index === '3') {
-          arr = goodsList.filter(item => item.price >= 300)
+        if (dataset.type === '0-100') {
+          arr = goodsList.filter(item => item.price <= 100)
         }
-        // 渲染函数
+        else if (dataset.type === '100-300') {
+          arr = goodsList.filter(item => item.price > 100 && item.price <= 300)
+        }
+        else if (dataset.type === '300+') {
+          arr = goodsList.filter(item => item.price > 300)
+        }
         render(arr)
       }
     })
+
+    render(goodsList)  // 页面一打开就需要渲染
+
   </script>
 </body>
 
