--- a/menu_JS/3.JS进阶/d3_JavaScript进阶第三天/07-作业/排错题/13-原型对象里面的this值.html
+++ b/menu_JS/3.JS进阶/d3_JavaScript进阶第三天/07-作业/排错题/13-原型对象里面的this值.html
@@ -9,6 +9,7 @@
 <body>
   <script>
     // 下面代码17行的this值 指向 Star构造函数，说法对吗，为什么？
+    // 答案：不对，this指向调用sing方法的对象o1
     function Star() {
       this.name = '姓名'
     }
@@ -18,6 +19,7 @@
     }
 
     const o1 = new Star()
+    o1.sing()
   </script>
 </body>
 </html>
