--- a/menu_JS/3.JS进阶/d3_JavaScript进阶第三天/07-作业/排错题/15-原型链的排错题.html
+++ b/menu_JS/3.JS进阶/d3_JavaScript进阶第三天/07-作业/排错题/15-原型链的排错题.html
@@ -9,6 +9,7 @@
 <body>
   <script>
     // 以下等式返回true，是否正确，为什么
+    // 答案：不对，Array.prototype.__proto__指向Object.prototype，而不是Object本身
     console.log(Array.prototype.__proto__ === Object);
   </script>
 </body>
